--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <!-- Avatar / Ảnh đại diện -->
     <div class="author-avatar" style="width: 120px; height: 120px; margin: 0 auto 1rem; border-radius: 50%; overflow: hidden; border: 2px solid var(--c2);">
       <!-- Thay src bằng đường dẫn ảnh của bạn -->
-      <img src="/static/The5er.png"
+      <img src="static/The5er.png"
            alt="Ảnh đại diện"
            loading="lazy" decoding="async"
            style="width:100%; height:100%; object-fit:cover;">
@@ -324,3 +324,4 @@
 
 </body>
 </html>
+
