--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       </div>
       <!-- Ảnh minh hoạ -->
       <div class="faq-image-wrap">
-      <img src="static/Screenshot 2025-08-06 153529.png" alt="JAVIS" />
+      <img src="static/screenshot_2025_08_06.png" alt="JAVIS" />
       </div>
     </details>
         <details class="faq-item"
@@ -145,7 +145,7 @@
       </div>
       <!-- Ảnh minh hoạ -->
         <div class="faq-image-wrap">
-        <img src="static/55%.png" alt="JAVIS" />
+        <img src="static/55percent.png" alt="JAVIS" />
         </div>
 
     </details>
@@ -198,7 +198,7 @@
     <!-- Avatar / Ảnh đại diện -->
     <div class="author-avatar" style="width: 120px; height: 120px; margin: 0 auto 1rem; border-radius: 50%; overflow: hidden; border: 2px solid var(--c2);">
       <!-- Thay src bằng đường dẫn ảnh của bạn -->
-      <img src="static/The5er.png"
+      <img src="static/the5er.png"
            alt="Ảnh đại diện"
            loading="lazy" decoding="async"
            style="width:100%; height:100%; object-fit:cover;">
@@ -324,4 +324,5 @@
 
 </body>
 </html>
+
 
