--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
   <div id="hero" class="fade-in">
     <h1>Chào mừng đến với J.A.R.V.I.S AI</h1>
     <p>"Trade Smarter with J.A.R.V.I.S AI"</p>
+    <p>"Powered by Nam Nguyen"</p>
 
     <div class="hero-buttons">
-      <button id="start-btn" class="glow-btn">Start Javis Agent</button>
+      <button id="start-btn" class="glow-btn">Start Javis Agent (coming soon)</button>
       <button id="scroll-faq-btn" class="glow-btn">❓ FAQ</button>
       <button id="scroll-author-btn" class="glow-btn">❇️ Tác giả</button>
       <button class="coming-soon-btn" disabled>Start AI Live Trader <br><span>(coming soon...)</span></button>
@@ -324,5 +325,6 @@
 
 </body>
 </html>
+
 
 
