--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
   <div id="hero" class="fade-in">
     <h1>Chào mừng đến với J.A.R.V.I.S AI</h1>
     <p>"Trade Smarter with J.A.R.V.I.S AI"</p>
-    <p>"Powered by Nam Nguyen"</p>
 
     <div class="hero-buttons">
-      <button id="start-btn" class="glow-btn">Start Javis Agent (coming soon)</button>
+      <button id="start-btn" class="glow-btn">Start Javis Agent (Coming soon)</button>
       <button id="scroll-faq-btn" class="glow-btn">❓ FAQ</button>
       <button id="scroll-author-btn" class="glow-btn">❇️ Tác giả</button>
       <button class="coming-soon-btn" disabled>Start AI Live Trader <br><span>(coming soon...)</span></button>
@@ -133,7 +132,7 @@
       </div>
       <!-- Ảnh minh hoạ -->
       <div class="faq-image-wrap">
-      <img src="static/screenshot_2025_08_06.png" alt="JAVIS" />
+      <img src="static/Screenshot 2025-08-06 153529.png" alt="JAVIS" />
       </div>
     </details>
         <details class="faq-item"
@@ -146,7 +145,7 @@
       </div>
       <!-- Ảnh minh hoạ -->
         <div class="faq-image-wrap">
-        <img src="static/55percent.png" alt="JAVIS" />
+        <img src="static/55%.png" alt="JAVIS" />
         </div>
 
     </details>
@@ -177,7 +176,7 @@
         Định hướng nâng cấp: JAVIS live trade Agent
       </summary>
       <div class="faq-answer auto-format"
-           data-raw="JAVIS đang trong giai đoạn hoàn thiện phiên bản beta – nơi mà mình tập trung vào việc đảm bảo an toàn và kỷ luật giao dịch là ưu tiên hàng đầu.\\n\\nĐịnh hướng sắp tới, JAVIS Agent sẽ hoạt động Demo với nguyên tắc:\\n- Rủi ro mỗi giao dịch chỉ 1% – đảm bảo an toàn vốn cho người dùng.\\n- Lợi thế xác suất (edge) ở mức 55–60% – không quá phô trương, nhưng đủ để tạo ra lợi nhuận ổn định nếu áp dụng đúng cách.\\n\\nVới triết lý “đi chậm để đi xa”, mình tin rằng JAVIS hoàn toàn có thể phát triển thành một AI Trader thực thụ trong tương lai – không phải kiểu máy móc mua bán vô tội vạ, mà là một chiến binh thông minh, kiên nhẫn, hiểu thị trường và biết quản lý rủi ro.\\n\\nMục tiêu của mình không phải là xây dựng một AI “đánh đâu thắng đó”, mà là tạo ra một đồng đội giao dịch an toàn – người bạn có thể tin cậy để đồng hành trên con đường đầu tư dài hạn.">
+           data-raw="Giai đoạn 2 sắp tới mục tiêu là phát triển JAVIS thành trí tuệ nhân tạo Trader, thay thế hoàn toàn trader truyền thống.\\n\\nỞ giai đoạn này, JAVIS Agent sẽ hoạt động Demo với nguyên tắc:\\n- Rủi ro mỗi giao dịch chỉ 1% – đảm bảo an toàn vốn cho người dùng.\\n- Lợi thế xác suất (edge) ở mức 55–60% – không quá phô trương, nhưng đủ để tạo ra lợi nhuận ổn định nếu áp dụng đúng cách.\\n\\nVới triết lý “đi chậm để đi xa”, mình tin rằng JAVIS hoàn toàn có thể phát triển thành một AI Trader thực thụ trong tương lai – không phải kiểu máy móc mua bán vô tội vạ, mà là một chiến binh thông minh, kiên nhẫn, hiểu thị trường và biết quản lý rủi ro.\\n\\nMục tiêu của mình không phải là xây dựng một AI “đánh đâu thắng đó”, mà là tạo ra một đồng đội giao dịch an toàn – người bạn có thể tin cậy để đồng hành trên con đường đầu tư dài hạn.">
       </div>
     </details>
 
@@ -197,14 +196,15 @@
   <!-- AUTHOR SECTION START -->
   <section id="author" class="fade-in" style="padding: 2rem 1rem; max-width: 720px; margin: 3rem auto 0; text-align: center;">
     <!-- Avatar / Ảnh đại diện -->
-    <div class="author-avatar" style="width: 120px; height: 120px; margin: 0 auto 1rem; border-radius: 50%; overflow: hidden; border: 2px solid var(--c2);">
-      <!-- Thay src bằng đường dẫn ảnh của bạn -->
-      <img src="static/the5er.png"
-           alt="Ảnh đại diện"
-           loading="lazy" decoding="async"
-           style="width:100%; height:100%; object-fit:cover;">
+    <div class="certificate-wrapper">
+      <img src="static/the5er.png" alt="Chứng nhận" class="responsive-img">
     </div>
 
+    <div class="certificate-wrapper">
+      <img src="static/certificate.jpg" alt="Chứng nhận" class="responsive-img">
+    </div>
+  </div>
+  </div>
     <!-- Tên tác giả -->
     <h3 class="author-name" style="font-family: 'Montserrat', sans-serif; font-size: 1.75rem; color: var(--c1); margin-bottom: 0.5rem;">
       <!-- Thay thế bằng tên tác giả -->
@@ -325,6 +325,3 @@
 
 </body>
 </html>
-
-
-
