--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   <div id="hero" class="fade-in">
     <h1>Chào mừng đến với J.A.R.V.I.S AI</h1>
     <p>"Trade Smarter with J.A.R.V.I.S AI"</p>
+    <p>"Powered by Nam Nguyen"</p>
 
     <div class="hero-buttons">
       <button id="start-btn" class="glow-btn">Start Javis Agent (Coming soon)</button>
@@ -325,3 +326,4 @@
 
 </body>
 </html>
+
