--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </div>
       <!-- Ảnh minh hoạ -->
       <div class="faq-image-wrap">
-      <img src="static/Screenshot 2025-08-06 153529.png" alt="JAVIS" />
+      <img src="static/screenshot_2025_08_06.png" alt="JAVIS" />
       </div>
     </details>
         <details class="faq-item"
@@ -146,7 +146,7 @@
       </div>
       <!-- Ảnh minh hoạ -->
         <div class="faq-image-wrap">
-        <img src="static/55%.png" alt="JAVIS" />
+        <img src="static/55percent.png" alt="JAVIS" />
         </div>
 
     </details>
@@ -326,4 +326,5 @@
 
 </body>
 </html>
+
 
